--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="container mx-auto">
     <header>
-        <div class="flex justify-around items-center bg-base-100">
+        <div class="flex  justify-between lg:justify-around items-center bg-base-100">
             <div class="">
               <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -33,7 +33,7 @@
               </div>
               <a class="btn btn-ghost text-3xl">DEMAS RUSLI</a>
             </div>
-            <div class=" hidden lg:flex z-10">
+            <div class=" hidden lg:flex z-50">
               <ul class="menu menu-horizontal px-1">
                 <li class="motherMenu uppercase text-xl"><a>PHOTOGRAPHY</a>
                     <ul class="hoverMenu bg-white">
@@ -61,7 +61,15 @@
             </div>
           </div>
     </header>
-    <main>
+    <main class="relative mt-3">
+        <div class="flex flex-col justify-center items-center absolute top-[1%] left-[40%] z-30 bg-slate-50 p-5">
+            <h1 class="text-2xl font-extralight font-bold">JOIN MY MAILING LIST</h1>
+            <div>
+                <input class="pe-20
+                p-2 ps-1 border border-red-400 outline-none" type="email" name="email" id="" placeholder="Enter your Email">
+                <button class="btn bg-black text-white hover:text-black px-10 ">Subscribe</button>
+            </div>
+        </div>
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="https://static.wixstatic.com/media/c56e34_e86a24f9e66f49faa2440bddb307961c~mv2.jpg/v1/fill/w_2043,h_1262,al_c,q_90,usm_0.66_1.00_0.01/c56e34_e86a24f9e66f49faa2440bddb307961c~mv2.jpg" class="w-full" />
@@ -88,13 +96,20 @@
               <img src="https://static.wixstatic.com/media/c56e34_e86a24f9e66f49faa2440bddb307961c~mv2.jpg/v1/fill/w_2043,h_1262,al_c,q_90,usm_0.66_1.00_0.01/c56e34_e86a24f9e66f49faa2440bddb307961c~mv2.jpg" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
-                <a href="#slide1" class="btn btn-circle">❯</a>
+                <a href="#slide5" class="btn btn-circle">❯</a>
               </div>
             </div>
-            <div id="slide4" class="carousel-item relative w-full">
-              <img src="	https://static.wixstatic.com/media/c56e34_e86a24f9…1/c56e34_e86a24f9e66f49faa2440bddb307961c~mv2.jpg" class="w-full" />
+            <div id="slide5" class="carousel-item relative w-full">
+              <img src="https://static.wixstatic.com/media/c56e34_135b7833767c42fe9de04b9532655460~mv2.jpg/v1/fill/w_2043,h_1262,al_c,q_90,usm_0.66_1.00_0.01/c56e34_135b7833767c42fe9de04b9532655460~mv2.jpg" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide6" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide6" class="carousel-item relative w-full">
+              <img src="https://static.wixstatic.com/media/c56e34_135b7833767c42fe9de04b9532655460~mv2.jpg/v1/fill/w_2043,h_1262,al_c,q_90,usm_0.66_1.00_0.01/c56e34_135b7833767c42fe9de04b9532655460~mv2.jpg" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide6" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
             </div>
