add phothograpy section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,35 @@
          
           </div>
     </main>
+    <section class="mt-20">
+        <h1 class="text-center mb-20 text-4xl">PHOTOGRAPHY</h1>
+        <div class="photograpy grid grid-cols-1 lg:grid-cols-3 gap-4 justify-center items-center">
+            <div class="">
+                <img class="w-full" src="https://static.wixstatic.com/media/c56e34_151a1adea670448aba584129963e2226~mv2_d_2000_2500_s_2.jpg/v1/fill/w_307,h_384,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/demasrusli%2001%202.jpg" alt="">
+                <h1 class="text-center">COMMISSIONS</h1>
+            </div>
+            <div>
+                <img class="w-full" src="https://static.wixstatic.com/media/c56e34_681638a3e6a24a3ca36bebaea29c4dc1~mv2_d_2000_2500_s_2.jpg/v1/crop/x_1,y_0,w_1999,h_2500/fill/w_307,h_384,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/DSC07136-Edit.jpg" alt="">
+                <h1 class="text-center">COMMISSIONS</h1>
+            </div>
+            <div>
+                <img class="w-full" src="https://static.wixstatic.com/media/c56e34_1cc54af2608d467ba404473c65df2711~mv2_d_2000_2500_s_2.jpg/v1/fill/w_307,h_384,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/DJI_0500.jpg" alt="">
+                <h1 class="text-center">COMMISSIONS</h1>
+            </div>
+            <div>
+                <img class="w-full" src="https://static.wixstatic.com/media/c56e34_2475f0d36fc0407fa12542574f75e9f3~mv2_d_2000_2500_s_2.jpg/v1/crop/x_1,y_0,w_1999,h_2500/fill/w_307,h_384,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/DSC09971-Edit.jpg" alt="">
+                <h1 class="text-center">COMMISSIONS</h1>
+            </div>
+            <div>
+                <img class="w-full" src="https://static.wixstatic.com/media/c56e34_6a0c3436fb7b4ec285ab7b37abe627e4~mv2_d_2000_2500_s_2.jpg/v1/crop/x_1,y_0,w_1999,h_2500/fill/w_307,h_384,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/DSC09385.jpg" alt="">
+                <h1 class="text-center">COMMISSIONS</h1>
+            </div>
+            <div>
+                <img class="w-full" src="https://static.wixstatic.com/media/c56e34_39c9024a6e2547be8a362d6a4a9298eb~mv2_d_2000_2499_s_2.jpg/v1/crop/x_0,y_0,w_1999,h_2499/fill/w_307,h_384,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/DJI_0038-Edit%20(3)-2.jpg" alt="">
+                <h1 class="text-center">COMMISSIONS</h1>
+            </div>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
